--- a/stijl.css
+++ b/stijl.css
@@ -3,3 +3,20 @@
 body {
 
 }
+
+h1 {
+  font-style: 'montserrat';
+}
+
+#navbar {
+  width: 100%;
+}
+
+#container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+#footer {
+  width: 100%;
+}
