--- a/stijl.css
+++ b/stijl.css
@@ -13,6 +13,12 @@ h1 {
   border-bottom: 2px solid #000;
 }
 
+#navbar a {
+  font-family: montserrat;
+  color: #000;
+  text-decoration: none;
+}
+
 #container {
   width: 80%;
   margin: 0 auto;
