--- a/stijl.css
+++ b/stijl.css
@@ -12,6 +12,7 @@ h1 {
   width: 100%;
   border-bottom: 2px solid #000;
   text-align: center;
+  height: 50px;
 }
 
 #navbar a {
@@ -19,6 +20,7 @@ h1 {
   color: #000;
   text-decoration: none;
   font-size: 16pt;
+  margin: 10px 0;
 }
 
 #container {
