--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@ body {
 	font-size: 1.05em;
 	line-height: 1.25em;
 	font-family: "Montserrat", Helvetica, Arial;
-	background: #808080 url('../img/jh.png') repeat;
+	background: #4b6cb7; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to left, #4b6cb7 , #182848); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to left, #4b6cb7 , #182848); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	color: #fff;
 }
 
