--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,5 +1,5 @@
 /* IMPORTS */
-@import url('https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pangolin');
+/*@import url('https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pangolin');*/
 
 /* CONTAINERS */
 
@@ -8,7 +8,7 @@ body {
     background: #ebebeb;
     font-family: "Open Sans", sans-serif;
     line-height: 150%;
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 header {
@@ -23,6 +23,7 @@ main {
     margin-left: 250px;
     margin-right: 200px;
     margin-top: 75px;
+    margin-bottom: 200px;
 }
 
 article.right {
@@ -315,7 +316,7 @@ footer h1 {
     footer {
         padding-right: 50px;
         padding-left: 50px;
-        width: calc(100% - 100px)
+        width: calc(100% - 100px);
     }
 }
 
@@ -328,8 +329,76 @@ footer h1 {
     .home {
         background: #ababab;
     }
+}
 
-    main {
-        margin-bottom: 200px;
+@media screen and (max-width: 500px) {
+    .logo {
+        margin-top: 0;
+        padding-top: 0;
+        position: absolute;
+        top: 10px;
+        left: 50px;
+    }
+
+    h1 {
+        font-size: 1.4rem;
+    }
+
+    h2 {
+        font-size: 1.2rem;
+    }
+
+    .float-left {
+        float: none;
+        display: block;
+        width: 100%;
+    }
+
+    article.right {
+        float: none;
+        display: block;
+        width: 100%;
+        margin: 5px;
+    }
+
+    .services {
+        max-width: 100%;
+    }
+
+    .service img {
+        width: 50%;
+    }
+
+    .service {
+        width: calc(100% - 20px);
+        display: block;
+        padding: 0 5px;
+    }
+
+    .service h3 {
+        width: 100%;
+        display: block;
+    }
+
+    .service p {
+        width: 100%;
+        display: block;
+    }
+
+    .socials {
+        display: block;
+        position: relative;
+        margin: 0 auto;
+    }
+
+    footer h1 {
+        display: block;
+        width: 100%;
+        float: none;
+    }
+
+    footer {
+        padding: 10px;
+        width: calc(100% - 20px);
     }
 }
