--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,5 +1,5 @@
 /* IMPORTS */
-/*@import url('https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pangolin');*/
+@import url('https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Pangolin');
 
 /* CONTAINERS */
 
