--- a/src/resume.css
+++ b/src/resume.css
@@ -2,7 +2,9 @@ body {
   font-family: Tajawal, Sans-Serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: Tajawal, Sans-Serif;
   margin-bottom: 1rem;
 }
@@ -12,7 +14,7 @@ h1 {
 }
 
 h2 {
-  margin-bottom: .6rem;
+  margin-bottom: 0.6rem;
   font-size: 2rem;
 }
 
@@ -46,4 +48,18 @@ a {
 a:hover {
   text-decoration: underline;
   color: #000000;
+}
+
+.title {
+  text-decoration: underline;
+}
+
+.company, .location, .timespan {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+.company::before, .location::before, .timespan::before {
+  content: '|';
+  margin-right: 10px;
 }
